// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Connected/Sort mobile open with sort archived 1`] = `
<SortDropdown store={{}} mobile={true} open={true} sortType={"archived"} onSetSort={"function"} setOpen={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Dropdown className={"app-bar-dropdown"} open={true} toggle={"function"} direction={"down"} nav={false}>
    <ContextProvider value={{"open":true,"direction":"down","nav":false}}>
      <Manager tag={"div"}>
        <ContextProvider value={{}}>
          <ContextConsumer>
            <Component />
          </ContextConsumer>
        </ContextProvider>
      </Manager>
    </ContextProvider>
  </Dropdown>
</SortDropdown>
`;

exports[`Storyshots Connected/Sort open with no sort 1`] = `
<SortDropdown store={{}} open={true} sortType={null} onSetSort={"function"} setOpen={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Dropdown open={true} toggle={"function"} direction={"down"} nav={false}>
    <ContextProvider value={{"open":true,"direction":"down","nav":false}}>
      <Manager tag={"div"}>
        <ContextProvider value={{}}>
          <ContextConsumer>
            <Component />
          </ContextConsumer>
        </ContextProvider>
      </Manager>
    </ContextProvider>
  </Dropdown>
</SortDropdown>
`;

exports[`Storyshots Connected/Sort open with sort archived 1`] = `
<SortDropdown store={{}} open={true} sortType={"archived"} onSetSort={"function"} setOpen={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Dropdown open={true} toggle={"function"} direction={"down"} nav={false}>
    <ContextProvider value={{"open":true,"direction":"down","nav":false}}>
      <Manager tag={"div"}>
        <ContextProvider value={{}}>
          <ContextConsumer>
            <Component />
          </ContextConsumer>
        </ContextProvider>
      </Manager>
    </ContextProvider>
  </Dropdown>
</SortDropdown>
`;

exports[`Storyshots Connected/Sort open with sort due 1`] = `
<SortDropdown store={{}} open={true} sortType={"due"} onSetSort={"function"} setOpen={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Dropdown open={true} toggle={"function"} direction={"down"} nav={false}>
    <ContextProvider value={{"open":true,"direction":"down","nav":false}}>
      <Manager tag={"div"}>
        <ContextProvider value={{}}>
          <ContextConsumer>
            <Component />
          </ContextConsumer>
        </ContextProvider>
      </Manager>
    </ContextProvider>
  </Dropdown>
</SortDropdown>
`;

exports[`Storyshots Connected/Sort open with sort newest 1`] = `
<SortDropdown store={{}} open={true} sortType={"newest"} onSetSort={"function"} setOpen={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Dropdown open={true} toggle={"function"} direction={"down"} nav={false}>
    <ContextProvider value={{"open":true,"direction":"down","nav":false}}>
      <Manager tag={"div"}>
        <ContextProvider value={{}}>
          <ContextConsumer>
            <Component />
          </ContextConsumer>
        </ContextProvider>
      </Manager>
    </ContextProvider>
  </Dropdown>
</SortDropdown>
`;

exports[`Storyshots Connected/Sort open with sort oldest 1`] = `
<SortDropdown store={{}} open={true} sortType={"oldest"} onSetSort={"function"} setOpen={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Dropdown open={true} toggle={"function"} direction={"down"} nav={false}>
    <ContextProvider value={{"open":true,"direction":"down","nav":false}}>
      <Manager tag={"div"}>
        <ContextProvider value={{}}>
          <ContextConsumer>
            <Component />
          </ContextConsumer>
        </ContextProvider>
      </Manager>
    </ContextProvider>
  </Dropdown>
</SortDropdown>
`;

exports[`Storyshots Connected/Sort open with sort status 1`] = `
<SortDropdown store={{}} open={true} sortType={"status"} onSetSort={"function"} setOpen={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Dropdown open={true} toggle={"function"} direction={"down"} nav={false}>
    <ContextProvider value={{"open":true,"direction":"down","nav":false}}>
      <Manager tag={"div"}>
        <ContextProvider value={{}}>
          <ContextConsumer>
            <Component />
          </ContextConsumer>
        </ContextProvider>
      </Manager>
    </ContextProvider>
  </Dropdown>
</SortDropdown>
`;

exports[`Storyshots Connected/Sort sort checkbox 1`] = `
<Fragment>
  <FormCheckbox className={"sort-checkbox"} checked={true} id={"sort-checkbox"} onChange={"function"}>
    <label className={"sort-checkbox custom-control custom-checkbox"}>
      <input checked={true} onChange={"function"} id={"sort-checkbox"} type={"checkbox"} className={"custom-control-input"} />
      <label id={"sort-checkbox"} className={"custom-control-label"} aria-hidden={"true"} onClick={"function"} />
      <span className={"custom-control-description"} />
    </label>
  </FormCheckbox>
</Fragment>
`;
